*Empty MediaWiki Message*

--- a/1019.mw
+++ b/1019.mw
@@ -1,6 +1,6 @@
 {|border=0 cellpadding=10 width=100%
-|- bgcolor=silver
-|ეს არის სტატია ახალი წელთაღრიცხვის [[1019]] წლის შესახებ. სხვა მნიშვნელობებისთვის იხილეთ სტატია: [[1019 (რიცხვი)]].
+|- bgcolor=whitesmoke
+|<small>ეს არის სტატია ახალი წელთაღრიცხვის [[1019]] წლის შესახებ. სხვა მნიშვნელობებისთვის იხილეთ სტატია: [[1019 (რიცხვი)]]</small>.
 |}
 
 
