--- a/ტოლმა.mw
+++ b/ტოლმა.mw
@@ -1,3 +1,4 @@
+[[სურათი:Greek dolmades.jpg|thumb|250px|ტოლმის მომზადება ბერძნულად]]
 '''ტოლმა''' (თურქ. dolma; ბერძ. dolmades; სპარსულად Dolme (دلمه); სომხ. tolma (տոլմա); რუმინ. sarma) თურქული წარმოშობის კერძად ითვლება, თუმცა ის მრავალი მეზობელი ქვეყნის სამზარეულოს განუყოფელი ნაწილია. სიტყვა "დოლმა" თურქულად ნიშნავს "რაიმე დატენილს". ძირითადად ყურძნის ფოთლებში გახვეული ბრინჯის, ხახვის, გატარებული ხორცისა და სხვა ინგრედიენტთა ნარევია. პოპულარული წასახემსებელი კერძია აღმოსავლეთ ხმელთაშუაზღვისპირა ქვეყნებში. ითვლება, რომ კერძი თანამედროვე აღმოსავლეთ თურქეთიდანაა წარმოშობით და შემდეგ გავრცელდა ოსმალეთის იმპერიის სივრცეზე.
 
 [[თურქეთი|თურქეთსა]] და [[სომხეთი|სომხეთში]] ტოლმას უწოდებენ ნებისმიერ შეჭამადს, რომელიც კომბოსტოს, ყურძნის ფოთლებში, ბადრიჯანში, ან ბულგარულ პილპილშია გახვეული.
