*Empty MediaWiki Message*

--- a/ფრინველები.mw
+++ b/ფრინველები.mw
@@ -22,7 +22,7 @@
 ფრინველებს აქვთ შედარებით დიდი თავის ტვინი, კარგად განვითარებულკი ჰემისფეროები, მხედველობის ბორცვები და ნათხემი. ზურგის ტვინი კისრისა და წელის არეში გაგანიერებულია, აქედან ნერვები მიემართება ფრთებისა და ფეხებისაკენ. ფირნველებს კარგად აქვთ განვითარებული მხედველობა, სმენა და წონასწორობის დაცვის უნარი, ნაკლებად - გემოს შეგრძნება. მათი საბგერი აპარატი (ქვედა ხორხი ანუ სირინქსი) მაღალგანვითარებულია. ამ მხრივ განსაკუთრებით გამოირჩევიან მგალობელი [[ბეღურასნაირნი|ბეღურასნაირები]] და სხვა.
 
 ფრინველების ცხოვრებაში უდიდესი მნიშვნელობა აქვს სრულყოფილ სმენას, მაგ., ბუსნაირები სიბნელეშიც ადვილად აგნებენ ნადავლს, გუახარო და სალანგანები ბნელ გამოქვაბულებში ორიენტაციას იღებენ ექოლოკაციის საშუალებით. ფრინველების სიცოცხლის ხანგრძლივობა ტყვეობასა და ბუნებრივ პირობებში განსხვავებულია. ტყვეობაში წვრილი ფრინველები ცოცხლობენ 15-20 წელს, ვარდისფერი ვარხვი - 52, კაკადუ - 56, ზარნაშო - 70, ბუნებაში კი მათი სიცოცხლის ხანგრძლივობა ბევრად ნაკლებია. თანამედროვე ფრინველები დაჯგუფებულია 28 რიგად. ზოგი ავტორი ფრინველებს ყოფს 40 რიგად. თანამედროვე 8616 სახეობის ფრინველებიდან 5 ათასზე მეტი ბეღურასნაირია. საქართველოში ორნითოფაუნაში რეგისტრირებულია 350 სახეობა, აქედან მობინადრე და ბიბუდარია 210-მდე. გარემო პირობების - ტიპობრივი ადგილსამყოფელების შემცირებამ და მათმა გაჭუჭყიანებამ, ანთროპოზიგენიზაციამ გამოიწვია მთელი რიგი სახეობების მოსპობა ან გადაშენება. იშვიათი და ამოწყდომის საფრთხის წინაშე მდგარი ფრინველები შეტანილი არიან საერთაოშორისო და საქართველოს "წითელ წიგნში".
-
+{{ორნითოლოგია}}
 
 ===რესურსები ინტერნეტში===
 
