*Empty MediaWiki Message*

--- a/ფრინველთა_დარგოლვა.mw
+++ b/ფრინველთა_დარგოლვა.mw
@@ -4,7 +4,7 @@
 ფრინველთა დარგოლვა ხდება ბუდობის ადგილებში, სამიგრაციო გზებზე, ნომადობისას, ზამთრობისას, განგურის პერიოდში და სხვა. ფრინველთა დარგოლვა არის ინდივიდუალური და მასობრივი. ფრინველთა დარგოლვის შედეგად ადგენენ ფრინველთა გადაფრენის დროს, მიმართულებას, სიმაღლეს, განსახლებას, სიკვდილიანობის პროცენტს და მიზეზებს, რაც მნიშვნელოვანია თვითმფრინავების უსაფრთხო ფრენისათვის, ნადირობის ვადების კოორდინირებისათვის, პარაზიტებისა თუ დაავადებების გადატანის გზების შესწავლისათვის. 1962 წლიდან პარიზში დაარსდა დარგოლვის საერთაშორისო კომიტეტი, რომლის წევრები არიან ეროვნული დარგოლვის ცენტრების ხელმძღვანელები.
 
 
-{{ესკიზი}} 
+{{ორნითოლოგია}} 
 ==აგრეთვე იხილეთ==
 
 *[[ნიშანდება]]
