*Empty MediaWiki Message*

--- a/წივწივა.mw
+++ b/წივწივა.mw
@@ -1,6 +1,6 @@
 '''წივწივა''' (Parus), [[ფრინველები|ფრინველთა]] გვარი [[წივწივასებრნი|წივწივასებრთა]] ოჯახისა.
 
 
-{{ესკიზი}}    
+{{ორნითოლოგია}}    
 
 [[კატეგორია:ბეღურასნაირნი]]
