*Empty MediaWiki Message*

--- a/ბზეწვია.mw
+++ b/ბზეწვია.mw
@@ -1,7 +1,7 @@
 [[სურათი:Gebirgsstelze.jpg|thumb|right|ბზეწვია]]
 '''ბზეწვია''' (Motacilla cinerea), [[ბეღურასნაირნი|ბეღურასნაირთა]] რიგის პატარა [[ფრინველები|ფრინველი]]. იკვებება [[მწერები|მწერებითა]] და მათი მატლებით, კიბოსნაირებით. გავრცელებულია დასავლეთ ევროპაში, აზიასა და აფრიკაში.[[საქართველო|საქართველოში]] თითქმის ყველგან გვხვდება როგორც მობინადრე ფრინველი.
 
-
+{{ორნითოლოგია}}    
 [[კატეგორია:ბეღურასნაირნი]]
 
 [[bg:Планинска стърчиопашка]]
