*Empty MediaWiki Message*

--- a/ვეშაპთავა_ყანჩა.mw
+++ b/ვეშაპთავა_ყანჩა.mw
@@ -1,6 +1,6 @@
 [[სურათი:280px-Schuhschnabel-70.jpg|thumb|right|ვეშაპთავა ყანჩა]]
 '''ვეშაპთავა ყანჩა''' (Balaeniceps rex), [[ფრინველები|ფრინველი]] [[ლაკლაკისნაირნი|ლაკლაკისნაირთა]] რიგისა. სხეულის სიგრძეა 120 სმ, სიმაღლე - 1 მ.მდე, წონა - 5-7 კგ, [[ფრთები|ფრთების]] შლილი - 250 სმ-მდე. აქვს ფართო, მასიური, კაუჭიანი [[ნისკარტი]], რუხი სხეული; საჭისა და მომქნევი ბუმბული - შავია. გავრცელებულია აფრიკაში. საკმაოდ იშვიათია. ბუდობს ჭაობნარებში. [[ბუდე|ბუდეს]] იკეთებს წყლის და ხმელეთის-ბალახოვანი მცენარეებისაგან, დებს 1-2 თეთრ კვერცხს. ირვებება  [[თევზები|თევზებით]].
-
+{{ორნითოლოგია}}    
 
 [[კატეგორია:ლაკლაკისნაირნი]]
 
