*Empty MediaWiki Message*

--- a/აზერბაიჯანელები.mw
+++ b/აზერბაიჯანელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''აზერბაიჯანელები''' - [[ხალხი]], [[აზერბაიჯანი|აზერბაიჯანის]] ძირითადი მოსახლენი (5,8 მლნ). ცხოვრობენ აგრეთვე [[ირანი|ირანში]] (10,43 მლნ), [[რუსეთი|რუსეთის ფედერაციაში]] (336 ათ.), [[საქართველო|საქართველოში]] (307 ათ.), [[ყაზახეთი|ყაზახეთში]] (90 ათ.), [[სომხეთი|სომხეთში]] და სხვა ქვეყნებში. იყოფიან ეთნიკურ ჯგუფებად: აირუმები, აფშარები, ბაიათები, ყარადაღელები, ყარაფაფახები, შახსევენები. მიეკუთვნებიან [[ევროპეიდული რასა|ევროპეიდული რასის]] სამხრეთ შტოს.
 
 
@@ -8,7 +5,7 @@
 *'''საერთო რაოდენობა''': 17,2 მლნ. 
 *'''ენა''': [[აზერბაიჯანლი ენა|აზერბაიჯანული]]. 
 *'''მორწმუნეები''': ძირითადად მუსულმანები - [[შიიზმი|შიიტები]].
-
+{{ეთნოგრაფია}}
 
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:აზერბაიჯანელები|*]]
