*Empty MediaWiki Message*

--- a/აფხაზები.mw
+++ b/აფხაზები.mw
@@ -19,7 +19,7 @@
 *'''ენა''': აფხაზური. 
 *'''მორწმუნეები''': ძირითადად [[სუნიზმი|სუნიტი მუსულმანები]], არიან აგრეთვე [[მართლმადიდებლობა|მართლმადიდებლები]].
 
-{{ესკიზი}}
+{{ეთნოგრაფია}}
 
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:კავკასიის ხალხები]]
