*Empty MediaWiki Message*

--- a/თანამედროვე_ხელოვნების_მუზეუმი_(ნიუ-იორკი).mw
+++ b/თანამედროვე_ხელოვნების_მუზეუმი_(ნიუ-იორკი).mw
@@ -12,7 +12,7 @@
 *[[სეზანი, პოლ|პოლ სეზანის]] “მობანავე”
 *[[კალო, ფრიდა|ფრიდა კალოს]] “ავტო-პორტრეტი მოკვეცილი თმით”
 
-აქვე ასევე იხილავთ წამყვანი ამერიკელი მხატვრების [[პოლაკი, ჯეკსონ|ჯეკსონ პოლაკის]], [[ჯონსი, ჯასპერ|ჯასპერ ჯონსის]], [[ჰოპერი, ედვარდ|ედვარდ ჰოპერის]], [[ვარჰოლი, ენდი|ენდი ვარჰოლის]], [[კლოზი, ჩაკ|ჩაკ კლოზის]] და [[ბეკში, რალფ|რალფ ბეკშის]] ნამუშევრებს. მომას მსოფლიოში სახელგანთქმული მხატრვული ფოტოგრაფიის კოლექცია აქვს. აქვეა ასევე მნიშვნელოვანი დიზაინის კოლქეციები, მათ შორის [[ლასცლო, პოლ|პოლ ლასცლოს]] ნამუშევრები.
+აქვე ასევე იხილავთ წამყვანი ამერიკელი მხატვრების [[პოლოკი, ჯექსონ|ჯექსონ პოლოკის]], [[ჯონსი, ჯასპერ|ჯასპერ ჯონსის]], [[ჰოპერი, ედვარდ|ედვარდ ჰოპერის]], [[ვარჰოლი, ენდი|ენდი ვარჰოლის]], [[კლოზი, ჩაკ|ჩაკ კლოზის]] და [[ბეკში, რალფ|რალფ ბეკშის]] ნამუშევრებს. მომას მსოფლიოში სახელგანთქმული მხატრვული ფოტოგრაფიის კოლექცია აქვს. აქვეა ასევე მნიშვნელოვანი დიზაინის კოლქეციები, მათ შორის [[ლასცლო, პოლ|პოლ ლასცლოს]] ნამუშევრები.
 
 მომას მიდთაუნის შენობამ მნიშვნელოვანი რეკონსტრუქცია განიცადა 21-ე საუკუნის დასაწყისში. დაიხურა რა [[2002]] წლის [[21 მაისი|21 მაისს]], [[2004]] წლის [[20 ნოემბერი|20 ნოემბერს]] გაიხსნა იაპონელი არქიტექტორის [[იოშირო ტანიგუჩი|იოშირო ტანიგუჩის]] განახლებული პროექტით. ამ პერიოდში მომას კოლექციის ნაწილი გამოფენილი იყო ყოფილ ჭიკარტების ქარხანაში ლონგ-აილენდ სიტიში, [[ქუინსი|ქუინსში]]. მომას ხელახალ გახსნას მოსახლეობის უკმაყოფილება მოჰყვა შესვლის ფასის $12-დან $20-მდე გაზრდის გამო. ამგვარად მომა ნიუ-იორკში ყველაზე ძვირი მუზეუმია, თუმცა პარასკევს ნაშუადღევს 4 სთ-ის შემდეგ “გადაიხადეთ რამდენიც გსურთ” პოლიტიკა მოქმედებს და შესაძლებელია უფასოდ მოხვედრაც თუ რიგმა დღის ბოლომდე მოგიწიათ.
 
