--- a/სომხები.mw
+++ b/სომხები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''სომხები''' - [[ხალხი]], [[სომხეთი|სომხეთის]] ძირითადი მოსახლენი (3,08 მლნ). ცხოვრობენ აგრეთვე [[რუსეთი|რუსეთის ფედერაციაში]] (600 ათ.), [[საქართველო|საქართველოში]] (248 ათ.), [[აშშ|აშშ-]]ში (800 ათ.), [[საფრანგეთი|საფრანგეთში]] (270 ათ.), [[ირანი|ირანში]] (200 ათ.), [[სირია|სირიაში]] (170 ათ.), [[მთიანი ყარაბაღი|მთიან ყარაბაღში]] (146 ათ.), [[ლიბანი|ლიბანსა]] და [[თურქეთი|თურქეთში]] (150 ათ.). 
 
 
@@ -8,7 +5,7 @@
 *'''საერთო რაოდენობა''': 7 მლნ 
 *'''ენა''': [[სომხური ენა|სომხური]].
 *'''მორწმუნეები''': ძირითადად [[ქრისტიანობა|ქრისტიანები]] (მონოფიზიტები).
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:სომხები|*]]
 
