*Empty MediaWiki Message*

--- a/ოსები.mw
+++ b/ოსები.mw
@@ -1,5 +1,3 @@
-{{ესკიზი}}
-
 [[სურათი:Osetino komXXjc.jpg|thumb|right|ოსი ქალი ტრადიციულ ტანსაცმელში (მე-20 საუკუნის დასაწყისში)]]
 
 
@@ -10,7 +8,7 @@
 *'''საერთო რაოდენობა''': 598 ათ. 
 *'''ენა''': [[ოსური ენა|ოსური]]. 
 *'''მორწმუნეები''': ძირითადად [[მართლმადიდებლობა|მართლმადიდებლები]], არიან აგრეთვე [[სუნიზმი|სუნიტი მუსულმანები]].
-
+{{ეთნოგრაფია}}
 [[კატეგორია:ოსები|*]]
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[ca:Ossets]]
