--- a/ებრაელები.mw
+++ b/ებრაელები.mw
@@ -1,11 +1,42 @@
-{{ესკიზი}}
-
-
 '''ებრაელები''' - სემიტური მოდგმის ხალხი. რაოდენობა - 13,62 მლნ, მათ შორის [[აშშ|აშშ-]]ში - დაახლ. 6 მლნ, [[ისრაელი|ისრაელში]] - 4 მლნ, [[რუსეთი|რუსეთის ფედერაციაში]] - 551 ათ. 
 
 
 *'''სახელები''': თვითწოდება -  იეჰუდიმ, იდნ; ფრანგულად -  Juifs; რუსულად -  Евреи.
 *'''ენა''': ებრაელთა დიდი ნაწილი ლაპარაკობს იმ ქვეყნის ენაზე, სადაც ცხოვრობენ. ებრაელთა ნაწილი ლაპარაკობს აგრეთვე ებრაულ ენებზე - ივრიტი, იდიში და სხვა. 
 *'''მორწმუნეები''': ძირითადად [[იუდაიზმი|იუდეველები]]. დიასპორაში ისინი გაყოფილი არიან აშკენაზებად და სეფარდებად.
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
+
+[[af:Jood]]
+[[bg:&#1045;&#1074;&#1088;&#1077;&#1080;]]
+[[bs:Jevreji]]
+[[ca:Jueu]]
+[[cy:Iddew]]
+[[da:Jøde]]
+[[de:Juden]]
+[[en:Jew]]
+[[eo:Judoj]]
+[[es:Judío]]
+[[et:Jew]]
+[[fr:Juif]]
+[[he:יהודים]]
+[[hi:यहूदी]]
+[[hu:Zsidó]]
+[[id:Yahudi]]
+[[ja:ユダヤ人]]
+[[ko:유대인]]
+[[lt:Žydai]]
+[[mk:&#1045;&#1074;&#1088;&#1077;&#1080;]]
+[[nl:Jood]]
+[[no:Jøde]]
+[[pl:Żydzi]]
+[[ro:Evrei]]
+[[ru:Евреи]]
+[[simple:Jew]]
+[[sl:Judje]]
+[[sr:Јевреји]]
+[[sv:Judar]]
+[[th:&#3618;&#3636;&#3623;]]
+[[tr:Musevi]]
+[[uk:&#1030;&#1091;&#1076;&#1077;&#1111;]]
+[[zh:猶太人]]
