--- a/ბერძნები.mw
+++ b/ბერძნები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ბერძნები''' - [[ხალხი]], [[საბერძნეთი|საბერძნეთის]] ძირითადი მოსახლენი (9,72 მლნ). ცხოვრობენ აგრეთვე [[კვიპროსი|კვიპროსზე]] (570 ათ.), [[აშშ|აშშ-]]ში (550 ათ.), [[გერმანია|გერმანიაში]] (300 ათ.), [[რუსეთი|რუსეთის ფედერაციაში]] (92 ათ.).
 
 
@@ -8,7 +5,7 @@
 *'''საერთო რაოდენობა''': 12,4 მლნ. 
 *'''ენა''': [[ახალბერძნული ენა|ახალბერძნული]]. 
 *'''მორწმუნეები''': ძირითადად [[მართლმადიდებლობა|მართლმადიდებლები]].
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:ბერძნები|*]]
 
