*Empty MediaWiki Message*

--- a/ესტონელები.mw
+++ b/ესტონელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ესტონელები''' - [[ხალხი]], ესტონეთის ძირითადი მოსახლენი (963 ათ.); ცხოვრობენ აგრეთვე [[რუსეთი|რუსეთის ფედერაციაში]] (46,4 ათ.), [[აშშ|აშშ-]]ში, [[კანადა|კანადაში]], [[შვეცია|შვეციასა]] და [[ავსტრალია|ავსტრალიაში]]. 
 
 
@@ -8,7 +5,7 @@
 *'''საერთო რაოდენობა''': დაახლ. 1,1 მლნ. 
 *'''ენა''': [[ესტონური ენა|ესტონური]]. 
 *'''მორწმუნეები''': ძირითადად [[ლუთერანიზმი|ლუთერანები]], არიან აგრეთვე [[მართლმადიდებლობა|მართლმადიდებლები]] (ძირითადად სეტუს ჯგუფი).
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[de:Esten]]
 [[en:Estonians]]
