*Empty MediaWiki Message*

--- a/თათრები.mw
+++ b/თათრები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''თათრები''' - [[ხალხი]], თათარსტანის ძირითადი მოსახლენი (1,765 მლნ). ცხოვრობენ აგრეთვე ბაშკირეთში, მარეთის რესპუბლიკაში, მორდოვეთში, უდმურტეთში, ჩუვაშეთში და [[რუსეთი|რუსეთის ფედერაციის]] სხვა რეგიონებში. თათრებს უწოდებენ აგრეთვე სხვა თურქულენოვან ხალხებსაც: ციმბირელი თათრები, ყირიმელი თათრები და ა.შ. 
 
 
@@ -8,7 +5,7 @@
 *'''საერთო რაოდენობა''': 6,71 მლნ, მათ შორის [[რუსეთი|რუსეთის ფედერაციაში]] (ყირიმელი თათრების გარდა) 5,52 მლნ. 
 *'''ენა''': [[თათრული ენა|თათრული]]. 
 *'''მორწმუნეები''':  [[სუნიზმი|სუნიტი მუსულმანები]].
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[de:Tataren]]
 [[en:Tatars]]
