--- a/ქურთები.mw
+++ b/ქურთები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ქურთები''' - ხალხი [[თურქეთი|თურქეთში]] (12,0 მლნ), [[ირანი|ირანში]] (9,5 მლნ), [[ერაყი|ერაყში]] (ძირითადად ქურთების ავტონომიურ რეგიონში, 4,5 მლნ), [[სირია|სირიაში]] (1,2 ათ.) და სხვა ქვეყნებში. 
 
 
@@ -8,7 +5,7 @@
 *'''საერთო რაოდენობა''': 18 მლნ. 
 *'''ენა''': [[ქურთული ენა|ქურთული]](კურმანჯი). 
 *'''მორწმუნეები''': ძირითადად [[სუნიზმი|სუნიტი მუსულმანები]], არიან აგრეთვე სინკრეტული კულტების მიმდევრები (იეზიდები და სხვა).
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 
 [[ar:كردي]]
