*Empty MediaWiki Message*

--- a/უკრაინელები.mw
+++ b/უკრაინელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''უკრაინელები''' - [[ხალხი]], უკრაინის ძირითადი მოსახლენი (37,42 მლნ). [[რუსეთი|რუსეთის ფედერაციაში]] 4362,8 ათ., [[ყაზახეთი|ყაზახეთში]] 896,2 ათ., [[მოლდოვა|მოლდოვაში]] 600,3 ათ., [[ბელარუსი|ბელარუსში]] 291 ათ., [[უზბეკეთი|უზბეკეთში]] 153,2 ათ., [[ყირგიზეთი|ყირგიზეთში]] 108 ათ., [[ლატვია|ლატვიაში]] 92,1 ათ.; [[კანადა|კანადაში]] 530 ათ., [[აშშ|აშშ-]]ში 500 ათ., [[პოლონეთი|პოლონეთში]] 300 ათ., [[არგენტინა|არგენტინაში]] 100 ათ.. მიეკუთვნება [[ევროპეიდული რასა|ევროპეიდული რასის]] შუაევროპულ შტოს. იყოფიან ეთნიკურ ჯგუფებად - ლიტვინები, პოლეშჩუკები, გუცულები, ბოიკები, ლემკები. 
 
 
@@ -8,7 +5,7 @@
 *'''საერთო რაოდენობა''': 46 მლნ. 
 *'''ენა''': [[უკრაინული ენა|უკრაინული]], ფართოდაა გავრცელებული [[რუსული ენა|რუსული]]. 
 *'''მორწმუნეები''': [[მართლმადიდებლობა|მართლმადიდებლები]], ნაწილი - უნიატები.
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:უკრაინა]]
 
