*Empty MediaWiki Message*

--- a/თურქმენები.mw
+++ b/თურქმენები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''თურქმენები''' - [[ხალხი]], [[თურქმენეთი|თურქმენეთის]] ძირითადი მოსახლენი (2,537 მლნ). ცხოვრობენ აგრეთვე [[ავღანეთი|ავღანეთში]], [[ირანი|ირანში]], [[თურქეთი|თურქეთში]] და სხვა ქვეყნებში. 
 
 
@@ -8,7 +5,7 @@
 *'''საერთო რაოდენობა''': 4,6 მლნ 
 *'''ენა''': [[თურქმენული ენა|თურქმენული]]. 
 *'''მორწმუნეები''': [[სუნიზმი|სუნიტი მუსულმანები]].
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:თურქმენეთი]]
 
