*Empty MediaWiki Message*

--- a/ტაჯიკები.mw
+++ b/ტაჯიკები.mw
@@ -1,12 +1,11 @@
-{{ესკიზი}}
-
-
 '''ტაჯიკები''' - [[ხალხი]], [[ტაჯიკეთი|ტაჯიკეთის]] ძირითადი მოსახლენი (3,172 მლნ), [[რუსეთი|რუსეთის ფედერაციაში]] 38,2 ათ. 
 
 
 *'''სახელები''': ფრანგულად -  Tadjiks; რუსულად -  Таджики.
 *'''ენა''': [[ტაჯიკური ენა|ტაჯიკური]].
 *'''მორწმუნეები''': ძირითადად [[სუნიზმი|სუნიტი მუსულმანები]].
+
+{{ეთნოგრაფია}}
 
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:ტაჯიკეთი]]
