*Empty MediaWiki Message*

--- a/უზბეკები.mw
+++ b/უზბეკები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''უზბეკები''' - [[ხალხი]], [[უზბეკეთი|უზბეკეთის]] ძირითადი მოსახლენი (14,145 მლნ). ცხოვრობენ აგრეთვე [[ავღანეთი|ავღანეთში]] (1,7 მლნ), [[ტაჯიკეთი|ტაჯიკეთში]] (დაახლ. 1,2 მლნ), [[ყაზახეთი|ყაზახეთში]] (332 ათ.) და ა.შ. მიეკუთვნება [[ევროპეიდული რასა|ევროპეიდული რასის]] პამირულ-ფერგანულ შტოს.
 
 
@@ -8,7 +5,7 @@
 *'''საერთო რაოდენობა''': 18,5 მლნ. 
 *'''ენა''': [[უზბეკური ენა|უზბეკური]].
 *'''მორწმუნეები''': [[სუნიზმი|სუნიტი მუსულმანები]].
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:უზბეკები|*]]
 [[de:Usbeken]]
