*Empty MediaWiki Message*

--- a/ყაზახები.mw
+++ b/ყაზახები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ყაზახები''' - [[ხალხი]], [[ყაზახეთი|ყაზახეთის]] ძირითადი მოსახლენი (6,54 მლნ). ცხოვრობენ აგრეთვე [[უზბეკეთი|უზბეკეთში]] – 808 ათ., [[თურქმენეთი|თურქმენეთში]] – 87 ათ., [[ყირგიზეთი|ყირგიზეთში]] – 37 ათ., [[ტაჯიკეთი|ტაჯიკეთში]], [[რუსეთი|რუსეთის ფედერაციაში]] – 635,9 ათ.; [[ჩინეთი|ჩინეთში]] – 1,115 მლნ, მონღოლეთში – 125 ათ. 
 
 
@@ -8,7 +5,7 @@
 *'''საერთო რაოდენობა''': 9,42 მლნ. 
 *'''ენა''': [[ყაზახური ენა|ყაზახური]].
 *'''მორწმუნეები''': [[სუნიზმი|სუნიტი მუსულმანები]].
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:ყაზახები|*]]
 
