*Empty MediaWiki Message*

--- a/ყირგიზები.mw
+++ b/ყირგიზები.mw
@@ -1,13 +1,10 @@
-{{ესკიზი}}
-
-
 '''ყირგიზები''' - [[ხალხი]], [[ყირგიზეთი|ყირგიზეთის]] ძირითადი მოსახლენი (2,23 მლნ). ცხოვრობენ აგრეთვე [[უზბეკეთი|უზბეკეთში]] – 175 ათ., [[ტაჯიკეთი|ტაჯიკეთში]] – 64 ათ., [[რუსეთი|რუსეთის ფედერაციაში]] – 42 ათ. ; [[ჩინეთი|ჩინეთში]] – 150 ათ. (1987). 
 
 
 *'''სახელები''': თვითწოდება -  ''კირგიზ''; ფრანგულად -  Kirghizes; რუსულად -  Кыргизы.
 *'''ენა''': [[ყირგიზული ენა|ყირგიზული]]. 
 *'''მორწმუნეები''': [[სუნიზმი|სუნიტი მუსულმანები]].
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 
 [[de:Kirgisen]]
