*Empty MediaWiki Message*

--- a/ჩინელები.mw
+++ b/ჩინელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ჩინელები''' - დედამიწის ყველაზე რიცხვმრავალი [[ხალხი]], [[ჩინეთი|ჩინეთის]] ძირითადი მოსახლენი (1,093 მლნ). დიდი ჩინური დიასპორებია [[მალაიზია|მალაიზიაში]] (5.2 მლნ), [[ინდონეზია|ინდონეზიაში]] (5.2 მლნ), [[სინგაპური|სინგაპურში]] (2.0 მლნ), [[ვიეტნამი|ვიეტნამში]] (1.0 მლნ). 
 
 
@@ -8,6 +5,28 @@
 *'''საერთო რაოდენობა''': დაახლ. 1,125 მლნ. მიეკუთვნება [[მონგოლოიდური რასა|მონგოლოიდური რასის]] წყნარი ოკეანის შტოს. 
 *'''ენა''': ჩინური. 
 *'''მორწმუნეები''': [[ბუდიზმი|ბუდისტები]], [[დაოსიზმი|დაოსისტები]], [[კონფუციანელობა|კონფუციანელები]], არიან აგრეთვე [[ქრისტიანობა|ქრისტიანები]]. 
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:ჩინეთი]]
+
+[[da:Hankineser]]
+[[en:Han Chinese]]
+[[es:Etnia han]]
+[[et:Hiinlased]]
+[[fi:Han-kiinalaiset]]
+[[fr:Chinois Han]]
+[[gl:Han]]
+[[he:חאן (קבוצה אתנית)]]
+[[hr:Kinezi]]
+[[id:Suku Han]]
+[[ja:漢民族]]
+[[ko:한족]]
+[[nl:Han-Chinezen]]
+[[no:Han-kinesere]]
+[[pl:Chińczycy]]
+[[pt:Chinês Han]]
+[[ru:Китайцы]]
+[[sv:Hankineser]]
+[[th:ชนชาติฮั่น]]
+[[zh:汉族]]
+[[zh-min-nan:Hàn-cho̍k]]
