*Empty MediaWiki Message*

--- a/ზაჰა_ჰადიდი.mw
+++ b/ზაჰა_ჰადიდი.mw
@@ -1,7 +1,9 @@
-'''ზაჰა ჰადიდი''' (Zaha Hadid, არაბ: زها حديد), [[ბრიტანეთის იმპერიის ორდენი|ბრიტანეთის იმპერიის ორდენის]] წევრი (*[[31 ოქტომბერი]], [[1950]]) ცნობილი ბრიტანელი [[დეკონსტრუქტივიზმი|დეკონსტრუქტივისტი]] არქიტექტორი.
+'''ზაჰა ჰადიდი''' (Zaha Hadid, არაბ.: زها حديد), [[ბრიტანეთის იმპერიის ორდენი|ბრიტანეთის იმპერიის ორდენის]] წევრი (*[[31 ოქტომბერი]], [[1950]]) ცნობილი ბრიტანელი [[დეკონსტრუქტივიზმი|დეკონსტრუქტივისტი]] არქიტექტორი.
 
-დაიბადა [[ბაღდადი|ბაღდადში]], [[ერაყი]]; ხარისხი მათემატიკის განხრით მიიღო [[ბეირუთის ამერიკული უნივერსიტეტი|ბეირუთის ამერიკულ უნივერსიტეტში]], შემდეგ კი [[ლონდონის არქიტექტურის სკოლა|ლონდონის არქიტექტურის სკოლის]] არქიტექტურის ასოციაციაში გადადის სასწავლებლად. სწავლის დასრულების შემდეგ ”მეტროპოლიტენ-არქიტექჩა გრუპის” ოფისში იწყებს მუშაობს ყოფილს მასწავლებელთან, ჰოლანდიელ არქიტექტორ [[კოოლჰაასი, რემ|რემ კოოლჰაასთან]] პარტნიორად. 1979 წელს ლონდონში ის საკუთარ პრაქტიკას იწყებს. 1980-იან წლებში ის ასევე არქიტექტურის ასოციაციაში ასწავლიდა.
+==ბიოგრაფია==
+დაიბადა [[ბაღდადი|ბაღდადში]], [[ერაყი]]; ხარისხი მათემატიკის განხრით მიიღო [[ბეირუთის ამერიკული უნივერსიტეტი|ბეირუთის ამერიკულ უნივერსიტეტში]], შემდეგ კი [[ლონდონის არქიტექტურის სკოლა|ლონდონის არქიტექტურის სკოლის]] არქიტექტურის ასოციაციაში გადადის სასწავლებლად. სწავლის დასრულების შემდეგ ”მეტროპოლიტენ-არქიტექჩა გრუპის” ოფისში იწყებს მუშაობს ყოფილს მასწავლებელთან, ჰოლანდიელ არქიტექტორ [[კოოლჰაასი, რემ|რემ კოოლჰაასთან]] პარტნიორად. 1979 წელს [[ლონდონი|ლონდონში]] ის საკუთარ პრაქტიკას იწყებს. 1980-იან წლებში ის ასევე არქიტექტურის ასოციაციაში ასწავლიდა.
 
+==ნამუშევრები==
 ჰადიდის ნამუშევართა უმრავლესობა კონცეპტუალურია; მის მნიშვნელოვან პროექტებს მიეკუთვნება:
 *ვიტრას სახანძრო სადგური (1993), [[ვაიმ-ამ-რაინი]], [[გერმანია]]
 *როზენთალის თანამედროვე ხელოვნების ცენტრი (1998), [[ცინცინატი]], [[ოჰაიო]]
