--- a/ჰონგ-კონგი.mw
+++ b/ჰონგ-კონგი.mw
@@ -1,6 +1,6 @@
 [[Image:CIA-HongKong.jpg|200px|right]]
 [[Image:Hong kong flag 300.png|200px|right]]
-
+{{შერწყმა}}
 
 '''ჰონკონგი''' (Xianggang / Hong-Kong) – [[ჩინეთი|ჩინეთის]] ავტონომიური ერთეული, [[დიდი ბრიტანეთი|დიდი ბრიტანეთის]] ყოფილი კოლონია სამხრეთ-ჩინეთის ზღვის სანაპიროზე. ადრე ჩინეთის ნაწილი იყო, [[1841]] წელს დაიკავა ინგლისმა. [[1941]]-[[1945|45]] წლებში ოკუპირებულ იყო [[იაპონია|იაპონიის]] მიერ. დაუბრუნდა ჩინეთს [[1997]] წელს იმ პირობით, რომ 50 წლის განმავლობაში არ შეიცვლებოდა კაპიტალისტური წყობა და ეკონომიკური თავისუფლება. ამჟამად იგი უდიდეს სავაჭრო ცენტრად რჩება ჩინეთსა და სამხრეთ-აღმოსავლეთ აზიაში. 
 
@@ -11,7 +11,7 @@
 * '''ქალაქები (ათ.) ''' – სიანგანი (1.345), ძიულონგი (2.039), შატინი (638). 
 *'''ეროვნული შემოსავალი''': ''მოცულობა'' - 164 მლრდ $ (მე-27 ადგილი); ''1 სულ მოსახლეზე'' - 25.200 $;  ''სტრუქტურა'' (%) - სოფლის მეურნეობა 0, მრეწველობა 15, მომსახურება 85; 
 
-[[კატეგორია:ჩინეთი]]
+[[კატეგორია:ჩინეთის ქალაქები]]
 
 [[an:Hong Kong]]
 [[ar:هونغ كونغ]]
