--- a/ბუენოს-აირესი.mw
+++ b/ბუენოს-აირესი.mw
@@ -13,6 +13,7 @@
 *[http://www.buenosaires.com www.buenosaires.com - ქალაქის ინტერნეტ-გიდი]
 
 [[კატეგორია:არგენტინა]]
+[[კატეგორია:მსოფლიოს უდიდესი ქალაქები]]
 [[კატეგორია:სამხრეთ ამერიკის დედაქალაქები]]
 
 [[af:Buenos Aires]]
