--- a/ამერიკელები.mw
+++ b/ამერიკელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ამერიკელები''' - [[ხალხი]], [[აშშ|აშშ-ს]] მცხოვრებნი. ანთროპოლოგიურად ძალიან განსხვავებულნი არიან. ცალკე ეთნორასობრივ ჯგუფს ქმნიან აფრო-ამერიკელები. 
 
 
@@ -8,6 +5,6 @@
 *'''საერთო რაოდენობა''': 194,2 მლნ, მათ შორის [[აშშ|აშშ-]]ში 193 მლნ, [[კანადა|კანადაში]] 350 ათ., [[მექსიკა|მექსიკაში]] 135 ათ., [[დიდი ბრიტანეთი|ბრიტანეთში]] 120 ათ.. 
 *'''ენა''': ლაპარაკობენ ინგლისური ენის ამერიკულ ვარიანტზე. 
 *'''მორწმუნეები''': ძირითადად [[პროტესტანტიზმი|პროტესტანტები]] და [[კათოლიციზმი|კათოლიკები]].
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:ამერიკელები|*]]
