*Empty MediaWiki Message*

--- a/მოსკოვი.mw
+++ b/მოსკოვი.mw
@@ -23,10 +23,80 @@
 
 1905 წლის იანვარში, ქალაქის მმართველის, მერის, ინსტიტუტი იქნა ოფიციალურად შემოღებული, და [[ალექსანდრე ადრიანოვი]] გახდა მოსკოვის პირველი ოფიციალური მერი (ამჟამად მერის პოსტი უჭირავს იური ლუჟკოვს). 1917 წელს რუსეთის რევოლუციის წარმატებით განხორციელების შემდეგ, ლენინმა, უცხოეთის შემოტევის შიშით, დედაქალაქი პეტერბურგიდან ისევ მოსკოვში გადმოიტანა 1918 წლის 5 მარტს.
 
-მე-20 საუკუნის დასაწყისში, მუდმივმა გაფიცვებმა და შეიარაღებულმა ამბოხებებმა მოსკოვში დასაბამი მისცა ოქტომბრის რევოლუციას. 1918 წელს ბოლშევიკებმა გადმოიტანეს მთავრობა პეტერბურგიდან მოსკოვში. დიდი პატრიოტული ომის განმავლობაში, საბჭოთა სახელმწიფო თავდაცვის კომიტეტი და წითელი არმიის გენერალური შტაბი მდებარეობდა მოსკოვში. 1941 წელს ეროვნულ მოხალისეთა 16 დივიზიონი (160,000-ზე მეტი ადამიანი), 25 ბატალიონი (18,000 ადამიანი) და 4 საინჟინრო კორპუსი ჩამოყალიბდა მოსკოველთა მიერ. 1941 წლის ნოემბერში, გერმანიის არმიის ცენტრალური დაჯგუფება შეჩერებულ იქნა ქალაქის მისადგომებთან, მოგვიანებით კი უკუგდებულ იქნა მოსკოვისთვის ბრძოლების დროს. ქარხანათა უმრავლესობა ევაკუირებულ იქნა, მთავრობის უმრავლესობასთან ერთად, და 20 ოქტომბრიდან ქალაქი ალყის მგდომარეობაში აღმოჩნდა. ქალაქის დარჩენილმა მოსახლეობამ აქტიური საჰაერო ბომბარდირების პირობებში ააგო ტანკსაწინააღმდეგო თავდაცვის სისტემა. მოსკოვმა 1944 წლის 1 მაისს მედალი "მოსკოვის დაცვისთვის", ხოლო 1947 წელს მედალი "მოსკოვის 800 წლისთავის აღსანიშნავად" დაიმსახურა. 1965 წლის 8 მაისს კი მეორე მსოფლიო ომში გამარჯვების 20 წლისთავზე მოსკოვმა "ქალაქი გმირის" წოდება მიიღო. 1980 წელს მოსკოვმა უმასპინძლა ზაფხულის ოლიმპიურ თამაშებს.
+==ოქტომბრის რევოლუციის შემდგომ==
+მე-20 საუკუნის დასაწყისში, მუდმივმა გაფიცვებმა და შეიარაღებულმა ამბოხებებმა მოსკოვში დასაბამი მისცა ოქტომბრის რევოლუციას. 1918 წელს ბოლშევიკებმა მთავრობა პეტერბურგიდან მოსკოვში გადმოიტანეს. დიდი პატრიოტული ომის განმავლობაში, საბჭოთა სახელმწიფო თავდაცვის კომიტეტი და წითელი არმიის გენერალური შტაბი მდებარეობდა მოსკოვში. 1941 წელს ეროვნულ მოხალისეთა 16 დივიზიონი (160,000-ზე მეტი ადამიანი), 25 ბატალიონი (18,000 ადამიანი) და 4 საინჟინრო კორპუსი ჩამოყალიბდა მოსკოველთა მიერ. 1941 წლის ნოემბერში, გერმანიის არმიის ცენტრალური დაჯგუფება შეჩერებულ იქნა ქალაქის მისადგომებთან, მოგვიანებით კი უკუგდებულ იქნა მოსკოვისთვის ბრძოლების დროს. ქარხანათა უმრავლესობა ევაკუირებულ იქნა, მთავრობის უმრავლესობასთან ერთად, და 20 ოქტომბრიდან ქალაქი ალყის მგდომარეობაში აღმოჩნდა. ქალაქის დარჩენილმა მოსახლეობამ აქტიური საჰაერო ბომბარდირების პირობებში ააგო ტანკსაწინააღმდეგო თავდაცვის სისტემა. მოსკოვმა 1944 წლის 1 მაისს მედალი "მოსკოვის დაცვისთვის", ხოლო 1947 წელს მედალი "მოსკოვის 800 წლისთავის აღსანიშნავად" დაიმსახურა. 1965 წლის 8 მაისს კი მეორე მსოფლიო ომში გამარჯვების 20 წლისთავზე მოსკოვმა "ქალაქი გმირის" წოდება მიიღო. 1980 წელს მოსკოვმა უმასპინძლა ზაფხულის ოლიმპიურ თამაშებს.
 
 1991 წელს მოსკოვი გახდა მემარჯვენე კომუნისტთა, რომლებიც ეწინააღმდეგებოდნენ [[გორბაჩოვი, მიხეილ | მიხეილ გორბაჩოვის]] დემოკრატიულ რეფორმებს, პუტჩის სცენა. საბჭოთა კავშირის დაშლის შემდეგ იმავე წელს, მოსკოვი გახდა რუსეთის ფედერაციის დედაქალაქი. მას შემდეგ, საბაზრო ეკონომიკის განვითარებასთან ერთად მოსკოვი გახდა დასავლური ტიპის არქიტექტურის, მომსახურებისა და ცხოვრების სტილის აქტიური მიმდევარი.
 
 [[კატეგორია:რუსეთის ქალაქები]]
+[[კატეგორია:მსოფლიოს უდიდესი ქალაქები]]
 [[კატეგორია:ევროპის დედაქალაქები]]
+
+{{Link FA|de}}
+{{Link FA|vi}}
+
+[[af:Moskou]]
+[[als:Moskau]]
+[[ar:موسكو]]
+[[an:Moscú]]
+[[ast:Moscú]]
+[[bg:Москва]]
+[[zh-min-nan:Moskva]]
+[[be:Масква]]
+[[ca:Moscou]]
+[[cv:Мускав]]
+[[cs:Moskva]]
+[[cy:Moscfa]]
+[[da:Moskva]]
+[[de:Moskau]]
 [[en:Moscow]]
+[[et:Moskva]]
+[[el:Μόσχα]]
+[[es:Moscú]]
+[[eo:Moskvo]]
+[[fa:مسکو]]
+[[fr:Moscou]]
+[[ga:Moscó]]
+[[gl:Moscova - Москва]]
+[[ko:모스크바]]
+[[hi:मास्को]]
+[[hr:Moskva]]
+[[io:Moskva]]
+[[id:Moskwa]]
+[[is:Moskva]]
+[[it:Mosca (Russia)]]
+[[he:מוסקבה]]
+[[ka:მოსკოვი]]
+[[csb:Mòskwa]]
+[[la:Moscua]]
+[[lv:Maskava]]
+[[lt:Maskva]]
+[[lb:Moskau]]
+[[li:Moskou]]
+[[jbo:mosKUAS]]
+[[hu:Moszkva]]
+[[mk:Москва]]
+[[mo:Москова]]
+[[nl:Moskou]]
+[[nds:Moskau]]
+[[ja:モスクワ]]
+[[no:Moskva]]
+[[os:Мæскуы]]
+[[pl:Moskwa]]
+[[pt:Moscovo]]
+[[ro:Moscova]]
+[[ru:Москва]]
+[[sh:Moskva]]
+[[scn:Mosca (Russia)]]
+[[simple:Moscow]]
+[[sl:Moskva]]
+[[sr:Москва]]
+[[fi:Moskova]]
+[[sv:Moskva]]
+[[tt:Mäskäw]]
+[[th:มอสโก]]
+[[vi:Mát-xcơ-va]]
+[[tr:Moskova]]
+[[uk:Москва]]
+[[wa:Moscou]]
+[[zh:莫斯科]]
