--- a/სტამბოლი.mw
+++ b/სტამბოლი.mw
@@ -18,6 +18,7 @@
 
 [[კატეგორია:უძველესი ქალაქები]]
 [[კატეგორია:თურქეთის ქალაქები]]
+[[კატეგორია:მსოფლიოს უდიდესი ქალაქები]]
 [[კატეგორია:ბიზანტია]]
 
 [[an:Istambul]]
