--- a/ტოკიო.mw
+++ b/ტოკიო.mw
@@ -19,6 +19,7 @@
 [[კატეგორია:იაპონიის პრეფექტურები]]
 [[კატეგორია:ტოკიო]]
 [[კატეგორია:აზიის დედაქალაქები]]
+[[კატეგორია:მსოფლიოს უდიდესი ქალაქები]]
 
 [[ar:طوكيو]]
 [[an:Tokio]]
