--- a/ჯექსონ_პოლოკი.mw
+++ b/ჯექსონ_პოლოკი.mw
@@ -52,7 +52,7 @@
 * [http://www.nga.gov.au/International/Catalogue/Detail.cfm?IRN=36334&MnuID=2&GalID=1 ლურჯი პოლუსები ავსტრალიის ეროვნულ გალერეაში]
 
 
-[[კატეგორია:მხატვრები]]
+[[კატეგორია:ამერიკელი მხატვრები]]
 [[კატეგორია:ამერიკელები]]
 [[კატეგორია:დაბადებული 1912]]
 [[კატეგორია:გარდაცვლილი 1956]]
