*Empty MediaWiki Message*

--- a/ნიუ-იორკი.mw
+++ b/ნიუ-იორკი.mw
@@ -51,15 +51,13 @@
 ! colspan="2" | [[სურათი:New_York_From_Space.jpg|300px|center]]
 |}
 
-
-
-'''ნიუ-იორკი''' (''[[ინგლ.]]:'' New York; [nuːˈjɔːɹk]) - ქალაქი [[აშშ|ამერიკის შეერთებულ შტატებში]], შტატ [[ნიუ-იორკი (შტატი)|ნიუ-იორკში]]. 8.108.040 მოსახლით (830 კმ²-ზე) იგი ამერიკის ყველაზე დიდი და ჩრდილოეთ ამერიკის ყველაზე მჭიდროდ დასახლებული ქალაქია. ქალაქის [[მეტროპოლია|მეტროპოლიაში]] ცხოვრობს 22.313.756 მცხოვრები. ქალაქის ამავე სახელწოდების შტატისგან განსასხვავებლად მას «ნიუ იორკ სიტი»-ს უწოდებენ. ქალაქის მეტსახელია «დიდი ვაშლი» (''[[ინგლ.]]:'' Big Apple)-->
+'''ნიუ-იორკი''' (''[[ინგლ.]]:'' New York; [nuːˈjɔːɹk]) - ქალაქი [[აშშ|ამერიკის შეერთებულ შტატებში]], შტატ [[ნიუ-იორკი (შტატი)|ნიუ-იორკში]]. 8.108.040 მოსახლით (830 კმ²-ზე) იგი ამერიკის ყველაზე დიდი და ჩრდილოეთ ამერიკის ყველაზე მჭიდროდ დასახლებული ქალაქია. ქალაქის [[მეტროპოლია|მეტროპოლიაში]] ცხოვრობს 22.313.756 მცხოვრები. ქალაქის ამავე სახელწოდების შტატისგან განსასხვავებლად მას «ნიუ იორკ სიტი»-ს უწოდებენ. ქალაქის მეტსახელია «[[დიდი ვაშლი]]» (''[[ინგლ.]]:''Big Apple”)
 
 ნიუ-იორკი საერთაშორისო ფინანსების, პოლიტიკის, გართობისა და კულტურის ცენტრია და მსოფლიოს ერთ-ერთ უმნიშვნელოვანეს გლობალურ ქალაქთაგანია რესტორანთა, მუზეუმთა, გალერეათა, სამხატვრო-საშემსრულებლო დაწესებულებათა, მედიის, საერთაშორისო კორპორაციათა და საფინანსო ბაზართა შეუდარებელი რაოდენობით. აქ მდებარეობს [[გაერო|გაეროს]] მსოფლიო შტაბ-ბინა.
 
 ქალაქის ფარგლებში ხუთი რაიონია: [[ბრონქსი]], [[ბრუკლინი]], [[მანჰეტენი]], [[ქუინსი]] და [[სტეიტენ-აილენდი]]. სტეიტენ-აილენდის გარდა ყველა რაიონში მილიონზე მეტი მცხოვრებია და ცალ-ცალკე აშშ-ის უდიდეს ქალაქებს გაუსწორდებოდნენ.
 
-ნიუ-იორკი ყოველწლიურად უდიდესი რაოდენობის იმიგრანტებს იზიდავს 180 ქვეყნიდან, ისევე როგორც მთელი აშშ-დან, რომელნიც ქალაქში მოდიან მისი კულტურის, ენერგიის, კოსმოპოლიტიზმისა და ეკონომიურ შესაძლებლობათა გამო. ნიუ-იორკი ამჟამად ასევე გამოირჩევა უდიდეს ამერიკულ ქალაქთა შორის კრიმინალის ყველაზე დაბალი დონით.
+ნიუ-იორკი ყოველწლიურად უდიდესი რაოდენობის იმიგრანტებს იზიდავს მსოფლიოს 180 ქვეყნიდან, ისევე როგორც მთელი აშშ-დან, რომელნიც ქალაქში მისი კულტურის, ენერგიის, კოსმოპოლიტიზმისა და ეკონომიურ შესაძლებლობათა გამო მოდიან. ნიუ-იორკი ამჟამად ასევე გამოირჩევა უდიდეს ამერიკულ ქალაქთა შორის კრიმინალის ყველაზე დაბალი დონით.
 
 ==ისტორია==
 ==გეოგრაფია და გარემო==
@@ -73,10 +71,13 @@
 ==განათლება==
 ==სპორტი==
 ==რესურსები ინტერნეტში==
-
+*[http://www.nyc.gov/ ნიუ-იორკის ოფიციალური ვებ-გვერდი]
+*[http://wikitravel.org/en/New_York_City ტურისტის მეგზური]
+*[http://newyork.wikicities.com/wiki/ ნიუ-იორკის ვიკი]
 
 [[კატეგორია:ნიუ-იორკი]]
 [[კატეგორია:აშშ-ის ქალაქები]]
+[[კატეგორია:მსოფლიოს უდიდესი ქალაქები]]
 
 
 
