*Empty MediaWiki Message*

--- a/პეკინი.mw
+++ b/პეკინი.mw
@@ -1,7 +1,7 @@
 [[სურათი:Forbidden City1.JPG|thumb|250px|აკრძალული სასახლე, პეკინი]]
 '''პეკინი''' (ჩინ. 北京市, Běijīng, '''ბეიძინი''' - ჩრდილოეთის დედაქალაქი) -- [[ჩინეთი|ჩინეთის სახალხო რესპუბლიკის]] [[დედაქალაქი|დედაქალაქია]]. პეკინი ჩინეთის ოთხი მუნიციპალიტეტიდან ერთ-ერთია, რაც პროვინციის ექვივალენტიურია ჩინეთის ადმინისტრაციულ-ტერიტორიულ სტრუქტურაში. პეკინის მუნიციპალიტეტი ესაზღვრება [[ჰებეის პროვინცია (ჩინეთი)|ჰებეის პროვინციას]] ჩრიდლოეთით, დასავლეთითა და სამხრეთით, და აღმოსავლეთის მცირე ნაწილით [[ტიანძინი|ტიანძინის]] მუნიციპალიტეტს.
 
-პეკინი ჩინეთის სიდიდით მეორე ქალაქია მოსახლეობის მიხედვით, [[შანჰაი|შანჰაის]] შემდეგ. ის მთვარი სატრანსპორტო კვანძია, უამრავი სარკინიგზო ხაზით, გზებითა და ავტოსტრადებით ყველა მიმართულებით. ის ასევე ჩინეთის საერთაშორისო საჰაერო რეისების მთავარი პუნქტია. პეკინი ჩინეთის პოლიტიკური, საგანმანათლებლო და კულტურული ცენტრია, მაშინ როცა შანხაი და [[ჰონგ-კონგი]] მისი ეკონომიკური დასაყრდენია.
+პეკინი ჩინეთის სიდიდით მეორე ქალაქია მოსახლეობის მიხედვით, [[შანჰაი|შანჰაის]] შემდეგ. ის მთვარი სატრანსპორტო კვანძია, უამრავი სარკინიგზო ხაზით, გზებითა და ავტოსტრადებით ყველა მიმართულებით. ის ასევე ჩინეთის საერთაშორისო საჰაერო რეისების მთავარი პუნქტია. პეკინი ჩინეთის პოლიტიკური, საგანმანათლებლო და კულტურული ცენტრია, მაშინ როცა შანჰაი და [[ჰონგ-კონგი]] მისი ეკონომიკური დასაყრდენია.
 
 პეკინი ერთ-ერთია ჩინეთის ოთხ უძველეს დედაქალაქთა შორის.
 
@@ -9,6 +9,7 @@
 
 [[კატეგორია:ჩინეთის ქალაქები]]
 [[კატეგორია:აზიის დედაქალაქები]]
+[[კატეგორია:მსოფლიოს უდიდესი ქალაქები]]
 
 [[an:Pekín]]
 [[ar:بكين]]
