--- a/თომას_ჰარტ_ბენტონი_(მხატვარი).mw
+++ b/თომას_ჰარტ_ბენტონი_(მხატვარი).mw
@@ -28,7 +28,7 @@
 ==რესურსები ინტერნეტში==
 *[http://www.indiana.edu/~deanfac/benton/ ბენტონის ნამუშევრები], [[ინდიანას უნივერსიტეტი]].
 
-[[კატეგორია:მხატვრები]]
+[[კატეგორია:ამერიკელი მხატვრები]]
 [[კატეგორია:ამერიკელები]]
 [[კატეგორია:დაბადებული  1889]]
 [[კატეგორია:გარდაცვლილი  1975]]
