*Empty MediaWiki Message*

--- a/ლონდონი.mw
+++ b/ლონდონი.mw
@@ -27,9 +27,12 @@
 
 '''ლონდონი''' ([[ინგლისური ენა|ინგლ.]]: '''London''' [ˈlʌndən]) - არის [[დიდი ბრიტანეთი|დიდი ბრიტანეთისა და ჩრდილოეთ ირლანდიის გაერთიანებული სამეფოს]] დედაქალაქი. მდებარეობს მდინარე [[თემზა|თემზაზე]] სამხრეთ-აღმოსავლეთ [[ინგლისი|ინგლისში]]. ქალაქში ცხოვრობს 7.385.575 ადამიანი, აქედან 2.700.000 [[შიდა ლონდონი|შიდა ლონდონში]], [[აგლომერაცია|აგლომერაციაში]] კი - 10.645.800 ადამიანი (''2005 წლის 10 ივნისი''). [[1965]] წლის [[1 აპრილი|1 აპრილს]] დაარსებულ იქნა "[[დიდი ლონდონი]]".
 
+{{ესკიზი}}
+
 [[კატეგორია:დიდი ბრიტანეთის ქალაქები]]
 [[კატეგორია:ლონდონი|*]]
 [[კატეგორია:ევროპის დედაქალაქები]]
+[[კატეგორია:მსოფლიოს უდიდესი ქალაქები]]
 
 [[af:Londen]]
 [[als:London]]
