*Empty MediaWiki Message*

--- a/გრანტ_ვუდი.mw
+++ b/გრანტ_ვუდი.mw
@@ -1,4 +1,4 @@
-[[სურათი:Americangothic.jpg|thumb|right|250px|ამერიკული გოთიკა, 1930]] '''გრანტ ვუდი''' (დ. [[13 თებერვალი]], [[1891]] – გ. [[12 თებერვალი]], [[1942]]) ამერიკელი ფერმწერი დაიბადა ანამოსაში, [[აიოვა]]. მის ფერწერულ ტილოებზე ძირითადად შუადასავლეთის პროვინციელი ამერიკელებია ასახული.
+[[სურათი:Americangothic.jpg|thumb|right|250px|ამერიკული გოთიკა, 1930]] '''გრანტ ვუდი''' (დ. [[13 თებერვალი]], [[1891]] – გ. [[12 თებერვალი]], [[1942]]) ამერიკელი ფერმწერი, დაიბადა ანამოსაში, [[აიოვა]]. მის ფერწერულ ტილოებზე ძირითადად შუადასავლეთის პროვინციელი ამერიკელებია ასახული.
 
 ვუდის ყველაზე ცნობილია ნამუშევარია ფერწერული ტილო „ამერიკული გოთიკა“ (1930). ტილოზე გამოსახული ორი ადამიანი იყვნენ ვუდის და, ნან ვუდ გრაჰამი, და ოჯახის სტომატოლოგი, ექიმი ბაირონ მაკკიბი. კოტეჯი უკანა ფონზე მდებარეობს ელდონში, [[აიოვა]]. ნახატი პირველად გამოფენილ იქნა [[ჩიკაგოს ხელოვნების ინსტიტუტი|ჩიკაგოს ხელოვნების ინსტიტუტში]] სადაც მან $300-იანი პრიზი მიიღო. ნამუშევარმა მყისიერი აღიარება ჰპოვა მას შემდეგ რაც მისი შექმნის ისტორია მთელი ყვეყნის გაზეთებმა დაწერეს. ბოლო დროს ეს ნამუშევარი ხშირად სატირიზებულია კრიტიკოსთა მიერ, თუმცა ის მაინც [[რეგიონალიზმი|რეგიონალიზმისა]] და ამერიკული ხელოვნების თვალსაჩინო ნიმუშად რჩება.
 
@@ -19,7 +19,7 @@
 
 
 
-[[კატეგორია:მხატვრები]]
+[[კატეგორია:ამერიკელი მხატვრები]]
 [[კატეგორია:ამერიკელები]]
 [[კატეგორია:დაბადებული 1891]]
 [[კატეგორია:გარდაცვლილი 1942]]
