--- a/რიო-დე-ჟანეირო.mw
+++ b/რიო-დე-ჟანეირო.mw
@@ -1,11 +1,12 @@
 [[სურათი:Rio de Janeiro-Ipanema Beach.jpg|thumb|250px|იპანებას სანაპირო ქალაქის სამხრეთ ზონაში]]
-'''რიო-დე-ჟანეირო''' (პორტ. იანვრის მდინარე) შტატისა და ქალაქის სახელწოდებაა სამხრეთ-აღმოსავლეთ [[ბრაზილია|ბრაზილიაში]]. ქალაქს შემოკლებით მოიხსენიებენ, როგორც ’’’რიო’’’, და იგი განთქმულია ფეშენებელური სასტუმროებით ჩამწკრივებული ტურისტული სანაპიროებით [[კოპაკაბანა]] და [[იპანება]], ასევე იესოს გიგანტური ძეგლით ('Cristo Redentor') კორკოვადოს მთაზე, და ყოველწლიური საკარნავალო დღესასწაულებით. ქალაქს ასევე უდიდესი ტყე-პარკი აქვს აგლომერაციის ფარგლებში სახ. Floresta da Tijuca (ტიჟუკას ტყე).
+'''რიო-დე-ჟანეირო''' ([[პორტუგალიური ენა|პორტ.]] იანვრის მდინარე) შტატისა და ქალაქის სახელწოდებაა სამხრეთ-აღმოსავლეთ [[ბრაზილია|ბრაზილიაში]]. ქალაქს შემოკლებით მოიხსენიებენ, როგორც ’’’რიო’’’, და იგი განთქმულია ფეშენებელური სასტუმროებით ჩამწკრივებული ტურისტული სანაპიროებით [[კოპაკაბანა]] და [[იპანება]], ასევე იესოს გიგანტური ძეგლით ('Cristo Redentor') კორკოვადოს მთაზე, და ყოველწლიური [[მარდი-გრა|მარდი-გრას]] საკარნავალო დღესასწაულებით. ქალაქს უდიდესი ტყე-პარკი აქვს აგლომერაციის ფარგლებში სახ. Floresta da Tijuca (ტიჟუკას ტყე).
 
 ქალაქის კოორდინატებია 22°54′S 43°14′W. რიო-დე-ჟანეიროს მოსახლეობა დაახ. 6.150.000 (2004) და უჭირავს 1256 კმ². აგლომერაციის მოსახლეობა სავარაუდოდ 13 მილიონს აღწევს. ის ბრაზილიის სიდიდით მეორე ქალაქის სან-პაოლოს შემდეგ და ქვეყნის დედაქალაქი იყო 1960 წლამდე, სანამ ბრაზილია აიღებდა მის ადგილს. ქალაქის მცხოვრებლებს კარიოკას უწოდებენ. ქალაქის ამჟამიდელი მერია ცეზარ მაია.
 
 {{ესკიზი}}
 
 [[კატეგორია:ბრაზილიის ქალაქები]]
+[[კატეგორია:მსოფლიოს უდიდესი ქალაქები]]
 
 [[id:Rio de Janeiro]]
 [[bg:Рио де Жанейро]]
