*Empty MediaWiki Message*

--- a/ჯორჯია_ო’კიფი.mw
+++ b/ჯორჯია_ო’კიფი.mw
@@ -1,5 +1,5 @@
 [[სურათი:Georgiaokeefe.jpg|thumb|right|ჯორჯია ო'კიფი, ნიუ-მექსიკო, 1950 წელი, კარლ ვან ვეხტენის ფოტო]] 
-'''ჯორჯია ო’კიფი''' (Georgia O'Keeffe)(* [[15 ნოემბერი]], [[1887]], [[სან-პრერი]], [[ვისკონსინი]];  † [[6 მარტი]], [[1986]], [[სანტა-ფე]], [[ნიუ-მექსიკო]]) - მე-20 საუკუნის ამერიკის ხელოვნების ერთ-ერთი ყველაზე გამოჩენილი მოდერნისტი ფერმწერი.
+'''ჯორჯია ო’კიფი''' (Georgia O'Keeffe)(* [[15 ნოემბერი]], [[1887]], [[სან-პრერი]], [[ვისკონსინი]];  † [[6 მარტი]], [[1986]], [[სანტა-ფე]], [[ნიუ-მექსიკო]]) - მე-20 საუკუნის ამერიკის ხელოვნების ერთ-ერთი ყველაზე გამოჩენილი [[მოდერნიზმი|მოდერნისტი]] ფერმწერი.
 ----
 ო’კიფი დაიბადა და იზრდებოდა ქალაქ სან-პრერიში, [[ვისკონსინი]], მერძევე ფერმერთა ოჯახში. ის ო'კიფთა შვიდი შვილიდან მეორე იყო. აქვე შედის სკოლაში, სადაც ხატვის გაკვეთილებს აკვარელებით მხატვარი სარა მანი უტარებს. [[1902]] წლიდან ის ვილიამსბურგის, [[ვირჯინია]], სკოლაში გადავიდა. ადრეული ასაკიდან მიზნად დაისახა მხატვარი გამოსულიყო და [[1904]]-[[1905]] წლებში [[ჩიკაგოს ხელოვნების ინსტიტუტი|ჩიკაგოს ხელოვნების ინსტიტუტში]], ხოლო [[1907]]-[[1908]] წლებში კი ნიუ-იორკის სამხატვრო სტუდენტთა ლიგაში სწავლობდა. შემდეგ ის ხელოვნებას ასწავლის [[ტეხასი|ტეხასისა]] და სამხრეთის შტატების სხვადასხვა სკოლებში [[1912]]-[[1916]] წლებში. მოგვიანებით ნიუ-იორკში მისი ნამუშევრები აღმოაჩინა ამერიკელმა ფოტოგრაფმა [[შტიგლიცი, ალფრედ|ალფრედ შტიგლიცმა]]. შტიგლიცი ყოველმხრივ ხელს უწყობდა მისი ნამუშევრების ფართო აუდიტორიისთვის გაცნობას. ამ ორი ხელოვნის ცხოვრებისეული ურთიერთობა მათი შეუღლებით დაწყო [[1924]] წელს. შტიგლიცთან შეხვედრის შემდეგ ო'კიფი [[ნიუ-იორკი|ნიუ-იორკში]] სახლდება, მეუღლის გარდაცვალების შემდეგ კი ([[1946]]) ის [[ნიუ-მექსიკო|ნიუ-მექსიკოში]] გადადის.
 
@@ -47,7 +47,7 @@
 
 
 [[კატეგორია:ამერიკელები]]
-[[კატეგორია:მხატვრები]]
+[[კატეგორია:ამერიკელი მხატვრები]]
 [[კატეგორია:დაბადებული  1887]]
 [[კატეგორია:გარდაცვლილი  1986]]
 
