*Empty MediaWiki Message*

--- a/სანტიაგო.mw
+++ b/სანტიაგო.mw
@@ -4,6 +4,7 @@
 
 [[კატეგორია:ჩილე]]
 [[კატეგორია:სამხრეთ ამერიკის დედაქალაქები]]
+[[კატეგორია:მსოფლიოს უდიდესი ქალაქები]]
 
 [[ar:سانتياغو]]
 [[bg:Сантяго де Чили]]
