--- a/ნიკოლა_სკლიფოსოვსკი.mw
+++ b/ნიკოლა_სკლიფოსოვსკი.mw
@@ -26,4 +26,6 @@
 სურათი:Sklif_zubala.jpg|ზუბალაშვილის პორტრეტი
 </gallery>
 
-[[კატეგორია:მხატვრები]]
+[[კატეგორია:რუსი მხატვრები]]
+[[კატეგორია:ქართველი მხატვრები]]
+[[კატეგორია:რუსები]]
