*Empty MediaWiki Message*

--- a/ფრანს_ჰალსი.mw
+++ b/ფრანს_ჰალსი.mw
@@ -1,5 +1,5 @@
 [[image:800px-Frans Hals 013.jpg|thumb|right|250px|"წმინდა გიორგის მსროლელთა ასეულის ოფიცერთა ბანკეტი"]]
-'''ჰალსი, ფრანს''' (*[[1581]] და [[1585]] შორის, [[ანტვერპენი]] ― † [[26 აგვისტო]], [[1666]], [[ჰარლემი]]), [[ჰოლანდიელები |ჰოლანდიელი]] ფერმწერი. ფლამანდიელი ფეიქრის შვილი. ცხოვრობდა ჰარლემში. [[1616]] მოინახულა [[ანტვერპენი]]. სწავლობდა კ. ვან მანდერთან ([[1600]]-[[1603]]), [[1610]]-იდან ოსტატი. 
+'''ფრანს ჰალსი''' (*[[1581]] და [[1585]] შორის, [[ანტვერპენი]] ― † [[26 აგვისტო]], [[1666]], [[ჰარლემი]]), [[ჰოლანდიელები |ჰოლანდიელი]] ფერმწერი. ფლამანდიელი ფეიქრის შვილი. ცხოვრობდა ჰარლემში. [[1616]] მოინახულა [[ანტვერპენი]]. სწავლობდა კ. ვან მანდერთან ([[1600]]-[[1603]]), [[1610]]-იდან ოსტატი. 
 
 ჰალსის ხელოვნებისათვის დამახასიათებელია [[დემოკრატიზმი]], ხალხური ტიპებისადმი ცხოველი ინტერესი, ასახა ქვეყნის დამოუკიდებლობისათვის მებრძოლი ჰოლანდიელი ხალხის სულიერი სიმტკიცე; ჰოლანდიური ხელოვნება გაამდიდრა ადამიანთა გრძნობების გამოსახვისა და მოდელის შინაგანი სამყაროს ჩვენების საშუალებებით; იყენებდა თავისუფალ, ტემპერამენტულ მონასმებს. ადრინდელი პერიოდის ნამუშევრებში ("წმინდა გიორგის მსროლელთა ასეულის ოფიცერთა ბანკეტი", [[1616]], ფ. ჰალსის მუზეუმი, ჰარლემი) ნიშანდობლივია თბილი ტონებისაკენ სწრაფვა, მძიმე, მსუყე მონასმების საშუალებით ფორმათა გულდასმითი მოდელირება. [[1620]]-იან წლებში პორტრეტებთან ერთად ხატავდა ჟანრულ სცენებსა და ცალკეულ რელიგიურ კომპოზიციებს ("ლუკა მახარებელი", "მათე მახარებელი", დაახლოებით [[1623]]-[[1625]], დასავლეთ ევროპისა და აღმოსავლეთის ხელოვნებუს მუზეუმი, [[ოდესა]]). [[1620]] - [[1630]]-იანი წლებში პორტრეტებში ჰალსმა შექმნა ჰოლანდიური ტიპების საინტერესო გალერეა, გააფართოვა მოდელების სოციალური წრე. 
 
@@ -8,7 +8,7 @@
 ჰალსი გარდაიცვალა სიღარიბეში, დავრდომილთა სახლში. იგი ევროპული რეალისტური მხატვრობის ერთ-ერთი უდიდესი წარმომადგენელია; მის შემოქმედებას დიდი მნიშვნელობა ჰქონდა ჰოლანდიური ფერწერის შემდგომი განვითარებისათვის. მისი გავლენა განიცადეს [[ბრაუერი, ადრიან|ა. ბრაუერმა]], ძმებმა [[ოსტადეები|ა. და ი. ოსტადეებმა]], [[სტენი, იან|ი. სტენმა]] და სხვებმა.
 
 [[კატეგორია:ჰოლანდიელები]]
-[[კატეგორია:მხატვრები]]
+[[კატეგორია:ჰოლანდიელი მხატვრები]]
 [[კატეგორია:გარდაცვლილი  1666]]
 
 [[de:Frans Hals]]
