*Empty MediaWiki Message*

--- a/იაპონელები.mw
+++ b/იაპონელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''იაპონელები'''  - იზოლირებული ეთნოლინგვისტური ოჯახის [[ხალხი]], [[იაპონია|იაპონიის]] ძირითადი მოსახლენი (123,6 მლნ). მიეკუთვნება განსაკუთრებულ გარდამავალ რასობრივ ტიპს.
 
 
@@ -8,7 +5,7 @@
 *'''საერთო რაოდენობა''': 125,6 მლნ. 
 *'''ენა''': [[იაპონური ენა|იაპონური]]. 
 *'''მორწმუნეები''': ძირითადად [[სინტოიზმი|სინტოისტები]] და [[ბუდიზმი|ბუდისტები]], არიან აგრეთვე [[ქრისტიანობა|ქრისტიანები]] და სინკრეტული კულტების მიმდევრები.
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:იაპონელები|*]]
 [[cs:Japonci]]
