*Empty MediaWiki Message*

--- a/ბრაზილიელები.mw
+++ b/ბრაზილიელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ბრაზილიელები''' - [[ხალხი]], [[ბრაზილია|ბრაზილიის]] ძირითადი მოსახლენი; 149 მლნ. წარმოადგენენ 3 მთავარი რასობრივი კომპონენტის ერთობას - ევროპეიდული, მონგოლოიდური და ნეგროიდული. ევროპული წარმოშობის ბრაზილიელები შეადგენენ მთელი მოსახლეობის 50%-ს, მეტისები და მულატები - 20%, შავკანიანები და ინდიელები - 30%. ცხოვრობენ აგრეთვე [[არგენტინა|არგენტინაში]], [[პარაგვაი|პარაგვაიში]], [[აშშ|აშშ-]]ში, [[პორტუგალია|პორტუგალიაში]]. 
 
 
@@ -8,6 +5,6 @@
 *'''საერთო რაოდენობა''': 149,4 მლნ 
 *'''ენა''': პორტუგალიური. 
 *'''მორწმუნეები''': ძირითადად [[კათოლიციზმი|კათოლიკები]].
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:ბრაზილია]]
