--- a/ნატალია_გონჩაროვა_(მხატვარი).mw
+++ b/ნატალია_გონჩაროვა_(მხატვარი).mw
@@ -25,7 +25,7 @@
 
 
 [[კატეგორია:რუსები]]
-[[კატეგორია:მხატვრები]]
+[[კატეგორია:რუსი მხატვრები]]
 
 [[de:Natalija Sergejewna Gontscharowa]]
 [[en:Natalia Goncharova]]
