--- a/ფრიდა_კალო.mw
+++ b/ფრიდა_კალო.mw
@@ -26,7 +26,7 @@
 </gallery>
 
 [[კატეგორია:მექსიკელები]]
-[[კატეგორია:მხატვრები]]
+[[კატეგორია:მექსიკელი მხატვრები]]
 [[კატეგორია:დაბადებული  1907]]
 [[კატეგორია:გარდაცვლილი  1954]]
 
