*Empty MediaWiki Message*

--- a/იტალიელები.mw
+++ b/იტალიელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''იტალიელები''' - [[ხალხი]], [[იტალია|იტალიის]] ძირითადი მოსახლენი (54,35 მლნ). ცხოვრობენ აგრეთვე [[აშშ|აშშ-]]ში (8,5 მლნ), [[არგენტინა|არგენტინაში]] (1,35 მლნ), [[საფრანგეთი|საფრანგეთში]] (1,1 მლნ) და სხვა ქვეყნებში. ანთროპოლოგიურად მიეკუთვნება [[ევროპეიდული რასა|ევროპეიდული რასის]] ინდო-მედიტერანეულ შტოს.
 
 
@@ -9,7 +6,7 @@
 *'''სუბეთნიკური ჯგუფები''':  ვენეციელები, ლიგურიელები, კალაბრიელები, ლომბარდიელები, პიემონტელები, ტოსკანელები. განკერძოებით დგანა სიცილიელები და სარდინიელები. 
 *'''ენა''': [[იტალიური ენა|იტალიური]]. 
 *'''მორწმუნეები''': ძირითადად [[კათოლიციზმი|კათოლიკები]].
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:იტალიელები|*]]
 [[de:Italiener]]
