--- a/მექსიკელები.mw
+++ b/მექსიკელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''მექსიკელები''' - [[ხალხი]], [[მექსიკა|მექსიკის]] ძირითადი მოსახლენი (78 მლნ) და მეზობელ რაიონებში [[აშშ|აშშ-]]ში (13 მლნ); ანთროპოლოგიური ტიპი - ძირითადად მეტისები, რომლებიც ჩამოყალიბდნენ [[ესპანელები|ესპანელთა]] შერევით აბორიგენ ინდიელებთან (აცტეკები, მაია, ოტომიტები, მიშტეკები, საპოტეკები და ა.შ.). 
 
 
@@ -8,7 +5,7 @@
 *'''ენა''': [[ესპანური ენა|ესპანური]].
 *'''მორწმუნეები''': ძირითადად [[კათოლიციზმი|კათოლიკები]].
 
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:მექსიკა]]
 [[კატეგორია:მექსიკელები|*]]
