*Empty MediaWiki Message*

--- a/კორეელები.mw
+++ b/კორეელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''კორეელები''' - იზოლირებული ეთნოლინგვისტური ოჯახის [[ხალხი]], კორეის ნახევარკუნძულის ძირითადი მოსახლენი. ცხოვრობენ [[ჩრდილოეთი კორეა|ჩრდილოეთ კორეაში]] (22,5 მლნ), [[სამხრეთი კორეა|სამხრეთ კორეაში]] (44 მლნ), [[რუსეთი|რუსეთის ფედერაციაში]] 107 ათ., [[უზბეკეთი|უზბეკეთში]] 183 ათ., [[ყაზახეთი|ყაზახეთში]] 103,3 ათ. მიეკუთვნება [[მონგოლოიდური რასა|მონგოლოიდური რასის]] აღმოსავლეთაზიურ შტოს. კორეელთა ეთნოგენეზში მონაწილეობდნენ პალეოაზიური, ალთაური და ავსტრონეზიული ტომები.
 
 
@@ -8,7 +5,7 @@
 *'''საერთო რაოდენობა''': 70,2 მლნ. 
 *'''ენა''': [[კორეული ენა|კორეული]].
 *'''მორწმუნეები''': [[ბუდიზმი|ბუდისტები]], [[კონფუციანელობა|კონფუციანელები]], არიან აგრეთვე [[ქრისტიანობა|ქრისტიანები]] (პრესვიტერიანელები).
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:სამხრეთი კორეა]]
 [[კატეგორია:ჩრდილოეთი კორეა]]
